--- a/index.html
+++ b/index.html
@@ -1,148 +1,142 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mirko & Elena - 13 Settembre 2025</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <titleMirko & Elena - Matrimonio 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      background-color: #fff;
-      color: #2f2f2f;
+      font-family: 'Lora', serif;
+      background-color: #ffffff;
+      color: #333;
     }
+
     header {
-      background-color: #f6f6f6;
+      background: #fefefe;
       text-align: center;
       padding: 2rem 1rem;
-      border-bottom: 2px solid #ccc;
+      border-bottom: 3px solid #c9d5c2;
     }
+
     header h1 {
+      font-family: 'Dancing Script', cursive;
+      font-size: 3rem;
+      color: #a75d67;
       margin: 0;
-      font-size: 2.5rem;
-      color: #8a7260;
     }
-    header p {
+
+    header h2 {
       font-size: 1.2rem;
-      color: #77997e;
+      color: #6b8d6e;
+      margin: 0.5rem 0 0;
     }
+
     section {
-      padding: 2rem 1rem;
       max-width: 800px;
       margin: auto;
+      padding: 2rem 1rem;
     }
-    h2 {
-      color: #8a7260;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 0.5rem;
+
+    h3 {
+      color: #a75d67;
+      font-family: 'Dancing Script', cursive;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
-    .programma ul {
-      list-style: none;
-      padding: 0;
+
+    .card {
+      background: #f9f9f9;
+      border: 1px solid #e3e3e3;
+      border-left: 6px solid #a75d67;
+      border-radius: 10px;
+      padding: 1rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
-    .programma li {
-      margin: 0.5rem 0;
+
+    footer {
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #777;
+      margin-top: 2rem;
     }
-    iframe {
-      width: 100%;
-      height: 300px;
-      border: none;
+
+    .button {
+      display: inline-block;
+      padding: 0.7rem 1.5rem;
+      background-color: #c9d5c2;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 25px;
+      font-weight: bold;
       margin-top: 1rem;
     }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+
+    .button:hover {
+      background-color: #a3b69a;
     }
-    input, textarea, select, button {
-      padding: 0.8rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      background-color: #77997e;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #5d7b67;
-    }
-    .gallery-placeholder {
-      background-color: #eee;
-      border: 2px dashed #ccc;
-      padding: 2rem;
-      text-align: center;
-      color: #999;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 1rem;
-      color: #888;
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.4rem;
+      }
+      h3 {
+        font-size: 1.6rem;
+      }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Mirko & Elena</h1>
-  <p>13 Settembre 2025 - Riva del Garda</p>
-</header>
+  <header>
+    <h1>Mirko & Elena</h1>
+    <h2>13 Settembre 2025 · Riva del Garda</h2>
+  </header>
 
-<section>
-  <h2>Il Grande Giorno</h2>
-  <p>Ci sposiamo al <strong>Du Lac et Du Parc Grand Resort</strong> a Riva del Garda e non vediamo l’ora di condividere questa giornata speciale con voi!</p>
-</section>
+  <section>
+    <h3>Programma della Giornata</h3>
+    <div class="card">
+      <ul>
+        <li><strong>16:30</strong> · Cerimonia civile nel parco</li>
+        <li><strong>17:30</strong> · Aperitivo alla terrazza piscina Cristallo</li>
+        <li><strong>19:00</strong> · Cena nella veranda</li>
+        <li><strong>21:00</strong> · Taglio della torta & DJ set fino alle 1:00</li>
+      </ul>
+    </div>
 
-<section class="programma">
-  <h2>Programma</h2>
-  <ul>
-    <li>🕓 Ore 16:30 - Cerimonia civile al parco</li>
-    <li>🥂 Ore 17:30 - Aperitivo in terrazza</li>
-    <li>🍽️ Ore 19:00 - Cena in veranda</li>
-    <li>🎉 Ore 21:00 - Taglio della torta e DJ set fino alle 1:00</li>
-  </ul>
-</section>
+    <h3>Location</h3>
+    <div class="card">
+      <p><strong>Du Lac et Du Parc Grand Resort</strong></p>
+      <p>Viale Rovereto 44, Riva del Garda (TN)</p>
+      <!-- Facoltativo: puoi inserire Google Maps o foto -->
+    </div>
 
-<section>
-  <h2>Dove</h2>
-  <p><strong>Du Lac et Du Parc Grand Resort</strong><br>Viale Rovereto, 44, 38066 Riva del Garda TN</p>
-  <iframe src="https://www.google.com/maps?q=Du+Lac+et+Du+Parc+Grand+Resort,+Riva+del+Garda&output=embed"></iframe>
-</section>
+    <h3>Conferma la tua presenza</h3>
+    <div class="card">
+      <p>Per favore conferma la tua presenza entro il <strong>30 giugno 2025</strong> cliccando il pulsante qui sotto:</p>
+      <a class="button" href="#">RSVP</a>
+      <!-- In futuro collegheremo questo a un modulo Formspree o simile -->
+    </div>
 
-<section>
-  <h2>Conferma la tua presenza</h2>
-  <form action="https://formspree.io/f/YOUR_CODE_HERE" method="POST">
-    <input type="text" name="nome" placeholder="Il tuo nome e cognome" required>
-    <select name="presenza" required>
-      <option value="">Parteciperai?</option>
-      <option value="Sì, sarò presente">Sì, sarò presente</option>
-      <option value="No, con dispiacere">No, con dispiacere</option>
-    </select>
-    <textarea name="note" placeholder="Intolleranze, allergie o altre note..."></textarea>
-    <button type="submit">Invia</button>
-  </form>
-  <p style="font-size: 0.9rem; color: #666;">* I vostri dati saranno usati solo per organizzare il ricevimento.</p>
-</section>
+    <h3>Gallery</h3>
+    <div class="card">
+      <p>A breve potrai vedere qui le nostre foto e caricare le tue dal grande giorno 💕</p>
+      <!-- Spazio per slideshow futuro -->
+    </div>
 
-<section>
-  <h2>Regalo</h2>
-  <p>Il vostro regalo più bello sarà la vostra presenza!<br>
-  Se desiderate contribuire al nostro viaggio di nozze, a breve troverete qui l'IBAN.</p>
-</section>
+    <h3>Regalo di Nozze</h3>
+    <div class="card">
+      <p>Se desideri contribuire al nostro viaggio di nozze, troverai presto qui l’IBAN. Grazie di cuore! ✈️🌍</p>
+    </div>
+  </section>
 
-<section>
-  <h2>Galleria Fotografica</h2>
-  <div class="gallery-placeholder">
-    Qui verranno caricate le foto del nostro matrimonio e potrete caricare anche le vostre!
-  </div>
-</section>
-
-<footer>
-  © 2025 Mirko & Elena — Grazie per condividere con noi questo giorno speciale!
-</footer>
+  <footer>
+    © 2025 Mirko & Elena · Con amore 💗
+  </footer>
 
 </body>
 </html>
