--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <titleMirko & Elena - Matrimonio 2025</title>
+  <title>Mirko & Elena - Matrimonio 2025</title>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora&display=swap" rel="stylesheet">
   <style>
     body {
@@ -34,7 +34,7 @@
     }
 
     section {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       padding: 2rem 1rem;
     }
@@ -56,15 +56,6 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
 
-    footer {
-      background-color: #f0f0f0;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #777;
-      margin-top: 2rem;
-    }
-
     .button {
       display: inline-block;
       padding: 0.7rem 1.5rem;
@@ -78,6 +69,28 @@
 
     .button:hover {
       background-color: #a3b69a;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
+
+    .gallery img {
+      width: 100%;
+      border-radius: 12px;
+      object-fit: cover;
+      height: 200px;
+    }
+
+    footer {
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #777;
+      margin-top: 2rem;
     }
 
     @media (max-width: 600px) {
@@ -95,6 +108,7 @@
   <header>
     <h1>Mirko & Elena</h1>
     <h2>13 Settembre 2025 · Riva del Garda</h2>
+    <img src="https://images.unsplash.com/photo-1521540216272-a50305cd4421?auto=format&fit=crop&w=900&q=80" alt="Copertina matrimonio" style="width: 100%; max-height: 300px; object-fit: cover; border-radius: 10px; margin-top: 1rem;">
   </header>
 
   <section>
@@ -112,20 +126,22 @@
     <div class="card">
       <p><strong>Du Lac et Du Parc Grand Resort</strong></p>
       <p>Viale Rovereto 44, Riva del Garda (TN)</p>
-      <!-- Facoltativo: puoi inserire Google Maps o foto -->
-    </div>
-
-    <h3>Conferma la tua presenza</h3>
-    <div class="card">
-      <p>Per favore conferma la tua presenza entro il <strong>30 giugno 2025</strong> cliccando il pulsante qui sotto:</p>
-      <a class="button" href="#">RSVP</a>
-      <!-- In futuro collegheremo questo a un modulo Formspree o simile -->
+      <img src="https://images.unsplash.com/photo-1561488111-f06f7d36a3f3?auto=format&fit=crop&w=900&q=80" alt="Location" style="width:100%; border-radius:10px; margin-top:1rem;">
     </div>
 
     <h3>Gallery</h3>
     <div class="card">
-      <p>A breve potrai vedere qui le nostre foto e caricare le tue dal grande giorno 💕</p>
-      <!-- Spazio per slideshow futuro -->
+      <div class="gallery">
+        <img src="https://images.unsplash.com/photo-1529634858451-48a63b234a2b?auto=format&fit=crop&w=600&q=80" alt="Gallery 1">
+        <img src="https://images.unsplash.com/photo-1542062703-3f7b3216b8a0?auto=format&fit=crop&w=600&q=80" alt="Gallery 2">
+        <img src="https://images.unsplash.com/photo-1526045612212-70caf35c14df?auto=format&fit=crop&w=600&q=80" alt="Gallery 3">
+      </div>
+    </div>
+
+    <h3>RSVP</h3>
+    <div class="card">
+      <p>Per favore conferma la tua presenza entro il <strong>30 giugno 2025</strong> cliccando il pulsante qui sotto:</p>
+      <a class="button" href="#">RSVP</a>
     </div>
 
     <h3>Regalo di Nozze</h3>
