--- a/index.html
+++ b/index.html
@@ -2,157 +2,64 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mirko & Elena - Matrimonio 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Lora&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      font-family: 'Lora', serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #ffffff;
-      color: #333;
+      color: #4a5a43; /* verde salvia scuro */
+      margin: 20px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.6;
     }
-
-    header {
-      background: #fefefe;
+    h1 {
       text-align: center;
-      padding: 2rem 1rem;
-      border-bottom: 3px solid #c9d5c2;
+      color: #9e8170; /* rosa antico */
     }
-
-    header h1 {
-      font-family: 'Dancing Script', cursive;
-      font-size: 3rem;
-      color: #a75d67;
-      margin: 0;
+    img {
+      display: block;
+      margin: 20px auto;
+      max-width: 90%;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(158, 129, 112, 0.4);
     }
-
-    header h2 {
-      font-size: 1.2rem;
-      color: #6b8d6e;
-      margin: 0.5rem 0 0;
+    .programma {
+      background-color: #d9e4d9; /* verde salvia chiaro */
+      padding: 15px;
+      border-radius: 8px;
+      margin-top: 30px;
     }
-
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-
-    h3 {
-      color: #a75d67;
-      font-family: 'Dancing Script', cursive;
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-
-    .card {
-      background: #f9f9f9;
-      border: 1px solid #e3e3e3;
-      border-left: 6px solid #a75d67;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-
-    .button {
-      display: inline-block;
-      padding: 0.7rem 1.5rem;
-      background-color: #c9d5c2;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 25px;
-      font-weight: bold;
-      margin-top: 1rem;
-    }
-
-    .button:hover {
-      background-color: #a3b69a;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 12px;
-      object-fit: cover;
-      height: 200px;
-    }
-
     footer {
-      background-color: #f0f0f0;
+      margin-top: 50px;
+      font-size: 0.9em;
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #777;
-      margin-top: 2rem;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.4rem;
-      }
-      h3 {
-        font-size: 1.6rem;
-      }
+      color: #9e8170;
     }
   </style>
 </head>
 <body>
+  <h1>Mirko & Elena</h1>
 
-  <header>
-    <h1>Mirko & Elena</h1>
-    <h2>13 Settembre 2025 · Riva del Garda</h2>
-    <img src="https://images.unsplash.com/photo-1521540216272-a50305cd4421?auto=format&fit=crop&w=900&q=80" alt="Copertina matrimonio" style="width: 100%; max-height: 300px; object-fit: cover; border-radius: 10px; margin-top: 1rem;">
-  </header>
+  <img src="img/IMG-20240922-WA0011.jpg" alt="Foto di Mirko e Elena" />
 
-  <section>
-    <h3>Programma della Giornata</h3>
-    <div class="card">
-      <ul>
-        <li><strong>16:30</strong> · Cerimonia civile nel parco</li>
-        <li><strong>17:30</strong> · Aperitivo alla terrazza piscina Cristallo</li>
-        <li><strong>19:00</strong> · Cena nella veranda</li>
-        <li><strong>21:00</strong> · Taglio della torta & DJ set fino alle 1:00</li>
-      </ul>
-    </div>
+  <p>Vi aspettiamo il 13 settembre 2025 presso il Du Lac et Du Parc Grand Resort a Riva del Garda.</p>
 
-    <h3>Location</h3>
-    <div class="card">
-      <p><strong>Du Lac et Du Parc Grand Resort</strong></p>
-      <p>Viale Rovereto 44, Riva del Garda (TN)</p>
-      <img src="https://images.unsplash.com/photo-1561488111-f06f7d36a3f3?auto=format&fit=crop&w=900&q=80" alt="Location" style="width:100%; border-radius:10px; margin-top:1rem;">
-    </div>
-
-    <h3>Gallery</h3>
-    <div class="card">
-      <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1529634858451-48a63b234a2b?auto=format&fit=crop&w=600&q=80" alt="Gallery 1">
-        <img src="https://images.unsplash.com/photo-1542062703-3f7b3216b8a0?auto=format&fit=crop&w=600&q=80" alt="Gallery 2">
-        <img src="https://images.unsplash.com/photo-1526045612212-70caf35c14df?auto=format&fit=crop&w=600&q=80" alt="Gallery 3">
-      </div>
-    </div>
-
-    <h3>RSVP</h3>
-    <div class="card">
-      <p>Per favore conferma la tua presenza entro il <strong>30 giugno 2025</strong> cliccando il pulsante qui sotto:</p>
-      <a class="button" href="#">RSVP</a>
-    </div>
-
-    <h3>Regalo di Nozze</h3>
-    <div class="card">
-      <p>Se desideri contribuire al nostro viaggio di nozze, troverai presto qui l’IBAN. Grazie di cuore! ✈️🌍</p>
-    </div>
-  </section>
+  <div class="programma">
+    <h2>Programma della giornata</h2>
+    <ul>
+      <li><strong>16:30</strong> Inizio cerimonia civile</li>
+      <li><strong>17:30</strong> Aperitivo</li>
+      <li><strong>19:00</strong> Cena</li>
+      <li><strong>21:00</strong> Taglio della torta e musica DJ fino all’1:00</li>
+    </ul>
+  </div>
 
   <footer>
-    © 2025 Mirko & Elena · Con amore 💗
+    <p>Il sito sarà aggiornato con IBAN e altre informazioni. Grazie!</p>
   </footer>
-
 </body>
 </html>
