--- a/index.html
+++ b/index.html
@@ -3,63 +3,155 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mirko & Elena - Matrimonio 2025</title>
+  <title>Mirko & Elena - Il nostro matrimonio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet" />
   <style>
+    /* Reset base */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #ffffff;
+      font-family: 'Roboto', sans-serif;
+      background: #fff;
       color: #4a5a43; /* verde salvia scuro */
-      margin: 20px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
       line-height: 1.6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
     }
-    h1 {
+    header {
+      width: 100%;
+      max-width: 900px;
+      background: linear-gradient(135deg, #d9e4d9, #f6e6e1);
+      padding: 60px 20px 40px 20px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(74, 90, 67, 0.2);
       text-align: center;
+      margin-bottom: 40px;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3.5rem;
       color: #9e8170; /* rosa antico */
+      margin-bottom: 10px;
+      letter-spacing: 2px;
     }
-    img {
-      display: block;
-      margin: 20px auto;
-      max-width: 90%;
-      height: auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(158, 129, 112, 0.4);
+    header p {
+      font-size: 1.25rem;
+      color: #4a5a43;
+      font-weight: 500;
+      margin-bottom: 0;
     }
-    .programma {
-      background-color: #d9e4d9; /* verde salvia chiaro */
-      padding: 15px;
-      border-radius: 8px;
-      margin-top: 30px;
+    .photo {
+      max-width: 600px;
+      width: 90%;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(158, 129, 112, 0.3);
+      margin-bottom: 40px;
+      transition: transform 0.3s ease;
+      cursor: pointer;
+    }
+    .photo:hover {
+      transform: scale(1.05);
+    }
+    section {
+      width: 100%;
+      max-width: 900px;
+      background: #d9e4d9; /* verde salvia chiaro */
+      border-radius: 15px;
+      padding: 30px 25px;
+      box-shadow: 0 6px 15px rgba(74, 90, 67, 0.15);
+      margin-bottom: 40px;
+    }
+    section h2 {
+      font-family: 'Playfair Display', serif;
+      color: #9e8170;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-align: center;
+      letter-spacing: 1.2px;
+    }
+    ul.programma {
+      list-style: none;
+      font-size: 1.1rem;
+      color: #4a5a43;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    ul.programma li {
+      background: white;
+      margin-bottom: 15px;
+      padding: 12px 18px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(158, 129, 112, 0.15);
+      font-weight: 600;
+      text-align: center;
+      transition: background-color 0.3s ease;
+      cursor: default;
+    }
+    ul.programma li strong {
+      color: #9e8170;
+      margin-right: 10px;
+    }
+    ul.programma li:hover {
+      background-color: #f6e6e1;
     }
     footer {
-      margin-top: 50px;
-      font-size: 0.9em;
+      width: 100%;
+      max-width: 900px;
       text-align: center;
+      font-size: 0.9rem;
       color: #9e8170;
+      margin-bottom: 20px;
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 2.4rem;
+      }
+      section h2 {
+        font-size: 1.5rem;
+      }
+      ul.programma {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Mirko & Elena</h1>
+  <header>
+    <h1>Mirko & Elena</h1>
+    <p>Il nostro matrimonio - 13 settembre 2025</p>
+  </header>
 
-  <img src="img/IMG-20240922-WA0011.jpg" alt="Foto di Mirko e Elena" />
+  <img src="img/IMG-20240922-WA0011.jpg" alt="Foto di Mirko e Elena" class="photo" />
 
-  <p>Vi aspettiamo il 13 settembre 2025 presso il Du Lac et Du Parc Grand Resort a Riva del Garda.</p>
+  <section>
+    <h2>Location</h2>
+    <p style="text-align:center; font-size:1.1rem; max-width: 500px; margin: 0 auto;">
+      Du Lac et Du Parc Grand Resort, Riva del Garda  
+      <br />
+      Cerimonia civile e ricevimento nella stessa location.
+    </p>
+  </section>
 
-  <div class="programma">
+  <section>
     <h2>Programma della giornata</h2>
-    <ul>
+    <ul class="programma">
       <li><strong>16:30</strong> Inizio cerimonia civile</li>
       <li><strong>17:30</strong> Aperitivo</li>
       <li><strong>19:00</strong> Cena</li>
       <li><strong>21:00</strong> Taglio della torta e musica DJ fino all’1:00</li>
     </ul>
-  </div>
+  </section>
 
   <footer>
-    <p>Il sito sarà aggiornato con IBAN e altre informazioni. Grazie!</p>
+    <p>Il sito sarà aggiornato con IBAN e altre informazioni. Grazie per essere con noi!</p>
   </footer>
 </body>
 </html>
