--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
       box-sizing: border-box;
     }
     body {
-      font-family: 'Roboto', sans-serif;
-      background: #fff;
-      color: #4a5a43; /* verde salvia scuro */
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
+  font-family: 'Roboto', sans-serif;
+  background-color: #a8bca1; /* verde salvia chiaro */
+  color: #4a5a43;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 15px;
+}
     header {
       width: 100%;
       max-width: 900px;
