--- a/index.html
+++ b/index.html
@@ -1,156 +1,92 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mirko & Elena - Il nostro matrimonio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mirko & Elena - 13 Settembre 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    /* Reset base */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #a8bca1; /* verde salvia chiaro */
-  color: #4a5a43;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px 15px;
-}
-    header {
-      width: 100%;
-      max-width: 900px;
-      background: linear-gradient(135deg, #d9e4d9, #f6e6e1);
-      padding: 60px 20px 40px 20px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(74, 90, 67, 0.2);
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    header h1 {
-      font-family: 'Playfair Display', serif;
-      font-size: 3.5rem;
-      color: #9e8170; /* rosa antico */
-      margin-bottom: 10px;
-      letter-spacing: 2px;
-    }
-    header p {
-      font-size: 1.25rem;
-      color: #4a5a43;
-      font-weight: 500;
-      margin-bottom: 0;
-    }
-    .photo {
-      max-width: 600px;
-      width: 90%;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(158, 129, 112, 0.3);
-      margin-bottom: 40px;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-    .photo:hover {
-      transform: scale(1.05);
-    }
-    section {
-      width: 100%;
-      max-width: 900px;
-      background: #d9e4d9; /* verde salvia chiaro */
-      border-radius: 15px;
-      padding: 30px 25px;
-      box-shadow: 0 6px 15px rgba(74, 90, 67, 0.15);
-      margin-bottom: 40px;
-    }
-    section h2 {
-      font-family: 'Playfair Display', serif;
-      color: #9e8170;
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-      letter-spacing: 1.2px;
-    }
-    ul.programma {
-      list-style: none;
-      font-size: 1.1rem;
-      color: #4a5a43;
-      max-width: 400px;
-      margin: 0 auto;
-    }
-    ul.programma li {
-      background: white;
-      margin-bottom: 15px;
-      padding: 12px 18px;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(158, 129, 112, 0.15);
-      font-weight: 600;
-      text-align: center;
-      transition: background-color 0.3s ease;
-      cursor: default;
-    }
-    ul.programma li strong {
-      color: #9e8170;
-      margin-right: 10px;
-    }
-    ul.programma li:hover {
-      background-color: #f6e6e1;
-    }
-    footer {
-      width: 100%;
-      max-width: 900px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #9e8170;
-      margin-bottom: 20px;
+      margin: 0;
+      font-family: 'Raleway', sans-serif;
+      background-color: #f9f1ef;
+      color: #b77b7d;
     }
 
-    /* Responsive */
-    @media (max-width: 480px) {
-      header h1 {
-        font-size: 2.4rem;
-      }
-      section h2 {
-        font-size: 1.5rem;
-      }
-      ul.programma {
-        max-width: 100%;
-      }
+    header {
+      text-align: center;
+      padding: 4rem 1rem 2rem;
+    }
+
+    header h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 4rem;
+      margin: 0;
+      color: #b77b7d;
+    }
+
+    header h2 {
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      font-weight: 400;
+      color: #8c6f6f;
+    }
+
+    .section {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem 2rem;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+
+    .section h3 {
+      font-size: 1.8rem;
+      color: #b77b7d;
+      margin-bottom: 1rem;
+      font-family: 'Great Vibes', cursive;
+    }
+
+    .section p {
+      font-size: 1rem;
+      color: #5a4a4a;
+      line-height: 1.6;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #8c6f6f;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Mirko & Elena</h1>
-    <p>Il nostro matrimonio - 13 settembre 2025</p>
+    <h2>13 Settembre 2025 - Riva del Garda</h2>
   </header>
 
-  <img src="img/IMG-20240922-WA0011.jpg" alt="Foto di Mirko e Elena" class="photo" />
-
-  <section>
-    <h2>Location</h2>
-    <p style="text-align:center; font-size:1.1rem; max-width: 500px; margin: 0 auto;">
-      Du Lac et Du Parc Grand Resort, Riva del Garda  
-      <br />
-      Cerimonia civile e ricevimento nella stessa location.
+  <div class="section">
+    <h3>Il nostro giorno speciale</h3>
+    <p>
+      Siamo felici di condividere con voi il giorno più importante della nostra vita.<br>
+      La cerimonia civile si terrà presso il Du Lac et Du Parc Grand Resort alle ore 16:30.<br>
+      A seguire, aperitivo, cena, taglio torta e musica fino a notte fonda.
     </p>
-  </section>
+  </div>
 
-  <section>
-    <h2>Programma della giornata</h2>
-    <ul class="programma">
-      <li><strong>16:30</strong> Inizio cerimonia civile</li>
-      <li><strong>17:30</strong> Aperitivo</li>
-      <li><strong>19:00</strong> Cena</li>
-      <li><strong>21:00</strong> Taglio della torta e musica DJ fino all’1:00</li>
-    </ul>
-  </section>
+  <div class="section">
+    <h3>Conferma la tua presenza</h3>
+    <p>
+      A breve troverai qui il modulo per confermare la tua partecipazione e indicarci eventuali intolleranze alimentari.
+    </p>
+  </div>
 
   <footer>
-    <p>Il sito sarà aggiornato con IBAN e altre informazioni. Grazie per essere con noi!</p>
+    Mirko & Elena ❤️ 2025
   </footer>
 </body>
 </html>
+
