--- a/index.html
+++ b/index.html
@@ -3,90 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mirko & Elena - 13 Settembre 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Mirko & Elena - Matrimonio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:wght@300;500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Raleway', sans-serif;
-      background-color: #f9f1ef;
-      color: #b77b7d;
+      background-color: #9CAF88; /* verde salvia */
+      color: #7B4B4B; /* rosa antico */
     }
 
     header {
       text-align: center;
-      padding: 4rem 1rem 2rem;
+      padding: 60px 20px;
     }
 
-    header h1 {
+    h1 {
       font-family: 'Great Vibes', cursive;
-      font-size: 4rem;
+      font-size: 3.5em;
       margin: 0;
-      color: #b77b7d;
     }
 
-    header h2 {
-      font-size: 1.5rem;
-      margin-top: 1rem;
-      font-weight: 400;
-      color: #8c6f6f;
+    p {
+      font-size: 1.2em;
+      max-width: 600px;
+      margin: 20px auto;
     }
 
-    .section {
-      max-width: 800px;
-      margin: 2rem auto;
-      padding: 1rem 2rem;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-
-    .section h3 {
-      font-size: 1.8rem;
-      color: #b77b7d;
-      margin-bottom: 1rem;
-      font-family: 'Great Vibes', cursive;
-    }
-
-    .section p {
-      font-size: 1rem;
-      color: #5a4a4a;
-      line-height: 1.6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-      color: #8c6f6f;
+    .cover-image {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      display: block;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Mirko & Elena</h1>
-    <h2>13 Settembre 2025 - Riva del Garda</h2>
+    <p>Ci sposiamo! 13 settembre 2025<br>Du Lac et Du Parc Grand Resort, Riva del Garda</p>
   </header>
-
-  <div class="section">
-    <h3>Il nostro giorno speciale</h3>
-    <p>
-      Siamo felici di condividere con voi il giorno più importante della nostra vita.<br>
-      La cerimonia civile si terrà presso il Du Lac et Du Parc Grand Resort alle ore 16:30.<br>
-      A seguire, aperitivo, cena, taglio torta e musica fino a notte fonda.
-    </p>
-  </div>
-
-  <div class="section">
-    <h3>Conferma la tua presenza</h3>
-    <p>
-      A breve troverai qui il modulo per confermare la tua partecipazione e indicarci eventuali intolleranze alimentari.
-    </p>
-  </div>
-
-  <footer>
-    Mirko & Elena ❤️ 2025
-  </footer>
+  <img src="img/IMG-20240922-WA0011.jpg" alt="Mirko e Elena" class="cover-image">
 </body>
 </html>
+
 
