--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
   <section>
     <h3>Programma della giornata</h3>
     <ul>
-      <li>16:30 - Cerimonia civile al parco</li>
-      <li>17:30 - Aperitivo in terrazza piscina Cristallo</li>
-      <li>19:00 - Cena in veranda</li>
-      <li>21:00 - Taglio torta e DJ set fino all'1:00</li>
+      La nostra giornata speciale inizierà alle 16:30 con la cerimonia civile immersa nel verde del parco del Du Lac et Du Parc Grand Resort.
+      Dopo esserci detti "sì", ci sposteremo nella suggestiva terrazza della piscina Cristallo, dove dalle 17:30 vi accoglieremo per un raffinato aperitivo all’aperto.
+      Alle 19:00 ci ritroveremo nella veranda panoramica per una cena indimenticabile, circondati dall’atmosfera romantica del lago e dalla compagnia di tutti voi.
+      Infine, alle 21:00, sarà il momento del taglio della torta, seguito da musica, balli e tanta allegria con il nostro DJ set fino all’1:00.
     </ul>
   </section>
 
