--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mirko & Elena - 13 Settembre 2025</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #9CAF88;
+      background-color: #9CAF88; /* verde salvia */
       color: #3B3B3B;
     }
 
@@ -45,6 +45,13 @@
       color: #B27777;
       font-family: 'Montserrat', sans-serif;
       margin-top: 0;
+    }
+
+    .programma {
+      font-family: 'Playfair Display', serif;
+      text-align: justify;
+      font-size: 1.1rem;
+      line-height: 1.7;
     }
 
     form input,
@@ -92,12 +99,12 @@
 
   <section>
     <h3>Programma della giornata</h3>
-    <ul>
-      La nostra giornata speciale inizierà alle 16:30 con la cerimonia civile immersa nel verde del parco del Du Lac et Du Parc Grand Resort.
-      Dopo esserci detti "sì", ci sposteremo nella suggestiva terrazza della piscina Cristallo, dove dalle 17:30 vi accoglieremo per un raffinato aperitivo all’aperto.
-      Alle 19:00 ci ritroveremo nella veranda panoramica per una cena indimenticabile, circondati dall’atmosfera romantica del lago e dalla compagnia di tutti voi.
-      Infine, alle 21:00, sarà il momento del taglio della torta, seguito da musica, balli e tanta allegria con il nostro DJ set fino all’1:00.
-    </ul>
+    <p class="programma">
+      La nostra giornata speciale inizierà alle <strong>16:30</strong> con la cerimonia civile immersa nel verde del parco del Du Lac et Du Parc Grand Resort.  
+      Dopo esserci detti "sì", ci sposteremo nella suggestiva terrazza della piscina Cristallo, dove dalle <strong>17:30</strong> vi accoglieremo per un raffinato aperitivo all’aperto.  
+      Alle <strong>19:00</strong> ci ritroveremo nella veranda panoramica per una cena indimenticabile, circondati dall’atmosfera romantica del lago e dalla compagnia di tutti voi.  
+      Infine, alle <strong>21:00</strong>, sarà il momento del taglio della torta, seguito da musica, balli e tanta allegria con il nostro DJ set fino all’<strong>1:00</strong>.
+    </p>
   </section>
 
   <section>
@@ -138,15 +145,4 @@
 
   <section>
     <h3>Regalo di nozze</h3>
-    <p>Se desideri contribuire al nostro viaggio di nozze, ti forniremo presto l'IBAN ❤️</p>
-  </section>
-
-  <footer>
-    © 2025 Mirko & Elena. Tutti i diritti riservati.
-  </footer>
-</body>
-
-</html>
-
-
-
+    <p>Se desideri contribuire al nostro viaggio di nozze, t
