--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #9CAF88;
-      color: #B27777;
+      background-color: #9CAF88; /* Colore di sfondo originale del body */
+      color: #B27777; /* Colore del testo originale del body */
       position: relative;
       overflow-x: hidden;
     }
@@ -69,14 +69,14 @@
       background-color: rgba(255, 255, 255, 0.95);
       padding: 2rem;
       border-radius: 15px;
-      text-align: justify; /* Mantenuto justify per il testo generale */
+      text-align: justify;
     }
 
     h3 {
-      color: #B27777;
+      color: #B27777; /* Colore originale dei titoli H3 */
       font-family: 'Montserrat', sans-serif;
       margin-top: 0;
-      text-align: center; /* Centra i titoli delle sezioni */
+      text-align: center;
     }
 
     form input,
@@ -119,7 +119,7 @@
     }
 
     p, li {
-      color: #B27777;
+      color: #B27777; /* Colore originale dei paragrafi e liste */
     }
 
     /* NUOVI STILI PER IL PROGRAMMA */
@@ -127,21 +127,21 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px; /* Spazio tra gli elementi della timeline */
+      gap: 20px;
       padding: 20px 0;
-      text-align: center; /* Centra il testo all'interno di ogni blocco */
+      text-align: center;
     }
 
     .program-item {
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: rgba(255, 255, 255, 0.7); /* Sfondo leggermente trasparente */
+      background-color: rgba(255, 255, 255, 0.7);
       padding: 15px 20px;
       border-radius: 10px;
-      width: 90%; /* Occupa quasi tutta la larghezza disponibile */
-      max-width: 400px; /* Limita la larghezza massima per desktop */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombra leggera */
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .program-time {
@@ -152,9 +152,9 @@
     }
 
     .program-icon {
-      font-size: 2.5rem; /* Dimensione delle icone/emoji */
+      font-size: 2.5rem;
       margin-bottom: 10px;
-      color: #B27777; /* Colore delle icone */
+      color: #B27777;
     }
 
     .program-description {
@@ -163,46 +163,44 @@
       margin: 0;
     }
 
-    /* Linea connettiva tra gli elementi (opzionale ma bello) */
     .program-item + .program-item::before {
-      content: '↓'; /* Freccia che indica la direzione del tempo */
+      content: '↓';
       font-size: 2rem;
       color: #B27777;
-      margin: -10px 0; /* Sposta la freccia per sovrapporla leggermente */
-      z-index: 2; /* Assicura che la freccia sia sopra altri elementi */
+      margin: -10px 0;
+      z-index: 2;
     }
 
-    /* NUOVI STILI PER LA SEZIONE REGALO DI NOZZE */
+    /* STILI PER LA SEZIONE REGALO DI NOZZE (PERSONALIZZATI) */
     .gift-section {
-        background-image: url('img/parchi-ovest.jpg'); /* Immagine di sfondo per i Parchi dell'Ovest */
-        background-size: cover; /* L'immagine copre l'intera area */
-        background-position: center; /* Centra l'immagine */
-        background-repeat: no-repeat; /* Non ripete l'immagine */
-        color: #FFFFFF; /* Colore del testo bianco per maggiore contrasto */
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); /* Ombra sul testo per leggibilità */
-        min-height: 250px; /* Altezza minima per vedere bene lo sfondo */
-        display: flex; /* Per centrare verticalmente il contenuto */
+        background-image: url('img/parchi-ovest.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: #FFFFFF; /* Testo bianco per contrasto con l'immagine */
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+        min-height: 250px;
+        display: flex;
         flex-direction: column;
-        justify-content: center; /* Centra verticalmente */
-        align-items: center; /* Centra orizzontalmente */
-        text-align: center; /* Centra il testo */
-        padding: 3rem 2rem; /* Più padding per lasciare spazio all'immagine */
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 3rem 2rem;
     }
 
     .gift-section h3,
     .gift-section p {
-        color: #FFFFFF; /* Forza il colore del testo a bianco per essere leggibile */
-        background-color: rgba(0, 0, 0, 0.4); /* Sfondo semi-trasparente per il testo */
+        color: #FFFFFF; /* Forza il colore del testo a bianco solo in questa sezione */
+        background-color: rgba(0, 0, 0, 0.4);
         padding: 10px 20px;
         border-radius: 10px;
-        margin-top: 10px; /* Spazio sopra il paragrafo */
-        margin-bottom: 10px; /* Spazio sotto il paragrafo */
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .gift-section h3 {
-        font-size: 2.2rem; /* Rendi il titolo leggermente più grande */
+        font-size: 2.2rem;
     }
-
 
   </style>
 </head>
@@ -221,28 +219,32 @@
     <div class="program-timeline">
       <div class="program-item">
         <div class="program-time">16:30</div>
-        <div class="program-icon">👰🤵</div>         <p class="program-description">
+        <div class="program-icon">👰🤵</div>
+        <p class="program-description">
           Inizio della **cerimonia civile** immersa nel verde del parco.
         </p>
       </div>
 
       <div class="program-item">
         <div class="program-time">17:30</div>
-        <div class="program-icon">🥂</div>         <p class="program-description">
+        <div class="program-icon">🥂</div>
+        <p class="program-description">
           **Raffinato aperitivo** all'aperto nella suggestiva terrazza della piscina Cristallo.
         </p>
       </div>
 
       <div class="program-item">
         <div class="program-time">19:00</div>
-        <div class="program-icon">🍽️</div>         <p class="program-description">
+        <div class="program-icon">🍽️</div>
+        <p class="program-description">
           **Cena indimenticabile** nella veranda panoramica con vista lago.
         </p>
       </div>
 
       <div class="program-item">
         <div class="program-time">21:00</div>
-        <div class="program-icon">🎂</div>         <p class="program-description">
+        <div class="program-icon">🎂</div>
+        <p class="program-description">
           **Taglio della torta**, seguito da musica e balli con DJ set fino all'1:00.
         </p>
       </div>
@@ -284,7 +286,8 @@
     </div>
   </section>
 
-  <section class="gift-section">     <h3>Il Nostro Viaggio di Nozze</h3>
+  <section class="gift-section">
+    <h3>Il Nostro Viaggio di Nozze</h3>
     <p>
         Aiutateci a esplorare le meraviglie dei **Parchi dell'Ovest Americano**!
         Il vostro contributo sarà un ricordo indimenticabile di questo sogno.
