--- a/index.html
+++ b/index.html
@@ -1,302 +1,377 @@
 <!DOCTYPE html>
+
 <html lang="it">
+
 <head>
+
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Mirko & Elena - 13 Settembre 2025</title>
-  <link rel="icon" type="image/png" href="img/favicon.png"/>
+
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+
   <style>
+
     body {
+
       margin: 0;
+
       font-family: 'Montserrat', sans-serif;
-      background-color: #9CAF88; /* Colore di sfondo originale del body */
-      color: #B27777; /* Colore del testo originale del body */
+
+      background-color: #9CAF88;
+
+      color: #B27777;
+
       position: relative;
+
       overflow-x: hidden;
+
     }
+
+
 
     /* Cornici floreali laterali */
+
     .flower-border {
+
       position: fixed;
+
       top: 0;
+
       bottom: 0;
+
       width: 100px;
+
       z-index: 0;
+
       background-repeat: repeat-y;
+
       background-size: contain;
+
       background-position: center;
+
       opacity: 0.6;
+
     }
+
+
 
     .flower-left {
+
       left: 0;
+
       background-image: url('img/floreale-sinistra.png'); /* sostituisci con la tua immagine */
+
     }
+
+
 
     .flower-right {
+
       right: 0;
+
       background-image: url('img/floreale-destra.png'); /* sostituisci con la tua immagine */
+
     }
+
+
 
     header, section, footer {
+
       position: relative;
+
       z-index: 1;
+
     }
+
+
 
     header {
+
       background-color: rgba(255, 255, 255, 0.9);
+
       padding: 2rem;
+
       text-align: center;
+
     }
+
+
 
     header h1 {
+
       font-family: 'Great Vibes', cursive;
+
       font-size: 3rem;
+
       color: #B27777;
+
       margin: 0;
+
     }
+
+
 
     header h2 {
+
       font-size: 1.2rem;
+
       margin-top: 0.5rem;
+
       color: #B27777;
+
     }
+
+
 
     section {
+
       max-width: 800px;
+
       margin: 2rem auto;
+
       background-color: rgba(255, 255, 255, 0.95);
+
       padding: 2rem;
+
       border-radius: 15px;
+
       text-align: justify;
+
     }
+
+
 
     h3 {
-      color: #B27777; /* Colore originale dei titoli H3 */
+
+      color: #B27777;
+
       font-family: 'Montserrat', sans-serif;
+
       margin-top: 0;
-      text-align: center;
+
     }
+
+
 
     form input,
+
     form textarea,
+
     form select,
-    form button {
-      display: block;
-      width: 100%;
-      margin-top: 0.5rem;
-      margin-bottom: 1.5rem;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
 
     form button {
-      background-color: #B27777;
-      color: white;
-      border: none;
-      cursor: pointer;
+
+      display: block;
+
+      width: 100%;
+
+      margin-top: 0.5rem;
+
+      margin-bottom: 1.5rem;
+
+      padding: 0.75rem;
+
+      font-size: 1rem;
+
+      border: 1px solid #ccc;
+
+      border-radius: 5px;
+
     }
+
+
+
+    form button {
+
+      background-color: #B27777;
+
+      color: white;
+
+      border: none;
+
+      cursor: pointer;
+
+    }
+
+
 
     .gallery img {
+
       width: 100%;
+
       max-width: 300px;
+
       margin: 10px;
+
       border-radius: 10px;
+
     }
+
+
 
     footer {
+
       text-align: center;
+
       padding: 1rem;
+
       font-size: 0.9rem;
+
       color: #fff;
+
     }
+
+
 
     ul {
+
       padding-left: 1rem;
+
     }
+
+
 
     p, li {
-      color: #B27777; /* Colore originale dei paragrafi e liste */
-    }
 
-    /* NUOVI STILI PER IL PROGRAMMA */
-    .program-timeline {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    .program-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: rgba(255, 255, 255, 0.7);
-      padding: 15px 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .program-time {
-      font-family: 'Great Vibes', cursive;
-      font-size: 2rem;
       color: #B27777;
-      margin-bottom: 5px;
+
     }
-
-    .program-icon {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      color: #B27777;
-    }
-
-    .program-description {
-      font-size: 1rem;
-      color: #B27777;
-      margin: 0;
-    }
-
-    .program-item + .program-item::before {
-      content: '↓';
-      font-size: 2rem;
-      color: #B27777;
-      margin: -10px 0;
-      z-index: 2;
-    }
-
-    /* STILI PER LA SEZIONE REGALO DI NOZZE (PERSONALIZZATI) */
-    .gift-section {
-        background-image: url('img/parchi-ovest.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        color: #FFFFFF; /* Testo bianco per contrasto con l'immagine */
-        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-        min-height: 250px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 3rem 2rem;
-    }
-
-    .gift-section h3,
-    .gift-section p {
-        color: #FFFFFF; /* Forza il colore del testo a bianco solo in questa sezione */
-        background-color: rgba(0, 0, 0, 0.4);
-        padding: 10px 20px;
-        border-radius: 10px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    .gift-section h3 {
-        font-size: 2.2rem;
-    }
 
   </style>
+
 </head>
 
+
+
 <body>
-    <div class="flower-border flower-left"></div>
+
+  <!-- Cornici laterali -->
+
+  <div class="flower-border flower-left"></div>
+
   <div class="flower-border flower-right"></div>
 
+
+
   <header>
+
     <h1>Mirko & Elena</h1>
+
     <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
+
   </header>
 
+
+
   <section>
+
     <h3>Programma della giornata</h3>
-    <div class="program-timeline">
-      <div class="program-item">
-        <div class="program-time">16:30</div>
-        <div class="program-icon">👰🤵</div>
-        <p class="program-description">
-          Inizio della **cerimonia civile** immersa nel verde del parco.
-        </p>
-      </div>
 
-      <div class="program-item">
-        <div class="program-time">17:30</div>
-        <div class="program-icon">🥂</div>
-        <p class="program-description">
-          **Raffinato aperitivo** all'aperto nella suggestiva terrazza della piscina Cristallo.
-        </p>
-      </div>
+    <p>
 
-      <div class="program-item">
-        <div class="program-time">19:00</div>
-        <div class="program-icon">🍽️</div>
-        <p class="program-description">
-          **Cena indimenticabile** nella veranda panoramica con vista lago.
-        </p>
-      </div>
+      La nostra giornata speciale inizierà alle 16:30 con la cerimonia civile immersa nel verde del parco del Du Lac et Du Parc Grand Resort.
 
-      <div class="program-item">
-        <div class="program-time">21:00</div>
-        <div class="program-icon">🎂</div>
-        <p class="program-description">
-          **Taglio della torta**, seguito da musica e balli con DJ set fino all'1:00.
-        </p>
-      </div>
-    </div>
+      Dopo esserci detti "sì", ci sposteremo nella suggestiva terrazza della piscina Cristallo, dove dalle 17:30 vi accoglieremo per un raffinato aperitivo all’aperto.
+
+      Alle 19:00 ci ritroveremo nella veranda panoramica per una cena indimenticabile, circondati dall’atmosfera romantica del lago e dalla compagnia di tutti voi.
+
+      Infine, alle 21:00, sarà il momento del taglio della torta, seguito da musica, balli e tanta allegria con il nostro DJ set fino all’1:00.
+
+    </p>
+
   </section>
 
+
+
   <section>
+
     <h3>RSVP</h3>
+
     <form>
+
       <label for="nome">Nome e Cognome</label>
+
       <input type="text" id="nome" name="nome" required />
 
+
+
       <label for="presenza">Parteciperai?</label>
+
       <select id="presenza" name="presenza" required>
+
         <option value="">Seleziona</option>
+
         <option value="si">Sì</option>
+
         <option value="no">No</option>
+
       </select>
+
+
 
       <label for="scelta">Preferenze alimentari</label>
+
       <select id="scelta" name="scelta">
+
         <option value="">Seleziona</option>
+
         <option value="carne">Carne</option>
+
         <option value="pesce">Pesce</option>
+
         <option value="vegano">Vegano</option>
+
       </select>
 
+
+
       <label for="note">Allergie o intolleranze</label>
+
       <textarea id="note" name="note"></textarea>
 
+
+
       <button type="submit">Invia conferma</button>
+
     </form>
+
   </section>
+
+
 
   <section>
+
     <h3>Gallery</h3>
+
     <div class="gallery">
+
       <img src="img/IMG-20240922-WA0011.jpg" alt="Immagine matrimonio" />
+
     </div>
+
   </section>
 
-  <section class="gift-section">
-    <h3>Il Nostro Viaggio di Nozze</h3>
-    <p>
-        Aiutateci a esplorare le meraviglie dei **Parchi dell'Ovest Americano**!
-        Il vostro contributo sarà un ricordo indimenticabile di questo sogno.
-        Presto vi forniremo l'IBAN per rendere questo viaggio realtà ❤️
-    </p>
+
+
+  <section>
+
+    <h3>Regalo di nozze</h3>
+
+    <p>Se desideri contribuire al nostro viaggio di nozze, ti forniremo presto l'IBAN ❤️</p>
+
   </section>
+
+
 
   <footer>
+
     © 2025 Mirko & Elena. Tutti i diritti riservati.
+
   </footer>
+
 </body>
+
 </html>
